--- a/assets/main.css
+++ b/assets/main.css
@@ -30,7 +30,7 @@ body{
     background-attachment: fixed;
     color: #053A06; 
     text-align:left;
-    font-family:'Verdana',sans-serif;
+    font-family:'Tahoma',sans-serif;
     font-size:1em;
     line-height:1.5em;
     margin: 60px auto;
@@ -42,7 +42,7 @@ a.current{color: 770623;}
 a.current:hover{color: 770623;}
 a:hover{color: 770623;}
 a:active{color: 770623;}
-h1,h2,h3,h4{clear:left; color: 770623; margin:1.5em 0em 1em 0em; font-family:'Verdana',sans-serif;}
+h1,h2,h3,h4{clear:left; color: 770623; margin:1.5em 0em 1em 0em; font-family:'Tahoma',sans-serif;}
 h1{font-size:2.67em;}
 h2{font-size:2.00em;}
 h3{font-size:1.67em;}
@@ -77,14 +77,14 @@ th,td{
 }
 
 /* Website Banner */
-.banner {position: relative; font-family:'Verdana',serif;}
-.top-left {font-size:2.33em; color: #053A06; background: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
+.banner {position: relative; font-family:'Tahoma',sans-serif;}
+.top-left {font-size:2.em; color: #2F2F40; background: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
 .bottom-right {font-size:1.67em; color: #ffffff; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 
 /* Conference Title Logo */
-.title1{color: #053A06;} 
-.title2{color: #053A06;}
-.year{color: #053A06; font-size:0.67em; font-weight: lighter;}
+.title1{color: #2F2F40;} 
+.title2{color: #2F2F40;}
+.year{color: #2F2F40; font-size:0.67em; font-weight: lighter;}
 
 /* Navigation Links (Home, Registration, etc) */
 table.navigation{width:800px;}
@@ -98,8 +98,8 @@ td.sponsor img{width: 100%}
 /* The Table on the Program Page */
 td.room{padding: 4px 12px 4px 4px; width: 90%; vertical-align:bottom; font-size:1.67em; color: #52739e; height:32px;}
 td.date{white-space:nowrap; width:130px; text-align:right; vertical-align:top; padding:4px 16px 0px 0px;}
-td.title{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.5em; color: #813c54; height:32px; font-family:'Verdana',sans-serif;}
-td.title-special{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.67em; color: #52739e; height:32px; font-family:'Verdana',sans-serif;}
+td.title{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.5em; color: #813c54; height:32px; font-family:'Tahoma',sans-serif;}
+td.title-special{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.67em; color: #52739e; height:32px; font-family:'Tahoma',sans-serif;}
 td.speaker{padding: 4px 12px 4px 4px; font-style: italic; font-size:1em; max-height:999999px}
 td.abstract{padding: 4px 12px 12px 4px; font-size:1em; max-height:999999px}
 td.abstract img{display: block; margin: 4px auto 8px auto}
