--- a/assets/main.css
+++ b/assets/main.css
@@ -28,7 +28,7 @@ body{
     background-color: #ffffff;
     background-size: cover;
     background-attachment: fixed;
-    color: #053A06; 
+    color: #2F2F40; 
     text-align:left;
     font-family:'Tahoma',sans-serif;
     font-size:1em;
@@ -78,7 +78,7 @@ th,td{
 
 /* Website Banner */
 .banner {position: relative; font-family:'Tahoma',sans-serif;}
-.top-left {font-size:2.em; color: #2F2F40; background: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
+.top-left {font-size:2em; color: #2F2F40; background: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
 .bottom-right {font-size:1.67em; color: #ffffff; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 
 /* Conference Title Logo */
