--- a/assets/main.css
+++ b/assets/main.css
@@ -78,8 +78,8 @@ th,td{
 
 /* Website Banner */
 .banner {position: relative; font-family:'Tahoma',sans-serif;}
-.top-left {font-size:1.67em; color: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;} 
-.bottom-right {font-size:1.67em; color: #ffffff; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px;}
+.top-left {font-size:2.00em; color: #ffffff; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;} 
+.bottom-left {font-size:1.67em; color: #ffffff; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: left; position: absolute; bottom: 0px; right: 0px;}
 
 /* Conference Title Logo */
 .title1{color: #2F2F40;} 
