--- a/assets/main.css
+++ b/assets/main.css
@@ -13,7 +13,10 @@
  *   #b8860b; Dark Goldenrod, color for links
  */
 
-@import url('https://s.googleapis.com/css?family=Roboto%7CRoboto+Slab');
+/*@import url('https://s.googleapis.com/css?family=Roboto%7CRoboto+Slab');
+*/
+
+$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 *{
     border:0;
@@ -30,7 +33,7 @@ body{
     background-attachment: fixed;
     color: #2F2F40; 
     text-align:left;
-    font-family:'Tahoma',sans-serif;
+    font-family: $bodyFont;
     font-size:1em;
     line-height:1.5em;
     margin: 60px auto;
@@ -42,7 +45,8 @@ a.current{color: 770623;}
 a.current:hover{color: 770623;}
 a:hover{color: 770623;}
 a:active{color: 770623;}
-h1,h2,h3,h4{clear:left; color: 770623; margin:1.5em 0em 1em 0em; font-family:'Tahoma',sans-serif;}
+/*h1,h2,h3,h4{clear:left; color: 770623; margin:1.5em 0em 1em 0em; font-family:'Tahoma',sans-serif;} */
+h1,h2,h3,h4{clear:left; color: 770623; margin:1.5em 0em 1em 0em; font-family:$bodyFont;}
 h1{font-size:2.67em;}
 h2{font-size:2.00em;}
 h3{font-size:1.67em;}
@@ -98,8 +102,8 @@ td.sponsor img{width: 100%}
 /* The Table on the Program Page */
 td.room{padding: 4px 12px 4px 4px; width: 90%; vertical-align:bottom; font-size:1.67em; color: #52739e; height:32px;}
 td.date{white-space:nowrap; width:130px; text-align:right; vertical-align:top; padding:4px 16px 0px 0px;}
-td.title{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.5em; color: #813c54; height:32px; font-family:'Tahoma',sans-serif;}
-td.title-special{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.67em; color: #52739e; height:32px; font-family:'Tahoma',sans-serif;}
+td.title{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.5em; color: #813c54; height:32px; font-family:$bodyFont;}
+td.title-special{padding: 4px 12px 4px 4px; width: 90%; vertical-align:top; font-size:1.67em; color: #52739e; height:32px; font-family:$bodyFont;}
 td.speaker{padding: 4px 12px 4px 4px; font-style: italic; font-size:1em; max-height:999999px}
 td.abstract{padding: 4px 12px 12px 4px; font-size:1em; max-height:999999px}
 td.abstract img{display: block; margin: 4px auto 8px auto}
